<resources>
    <string name="app_name">Composition</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_understand">Understand</string>
    <string name="welcome_title">Состав числа</string>
    <string name="game_rules">Правила игры: перед вами будет три фигуры, две снизу и одна сверху, в двух из них будут числа. Необходимо, чтобы сумма чисел из двух нижних фигур была равна числу в верхней фигуре, для этого нужно вставить недостающее число.\n\nПример: в верхнем круге число 7, в одном из нижних знак вопроса, а в другом число 4. Значит на месте вопросительного знака должно быть число 3, потому что 3 + 4 = 7</string>
    <string name="button_test">Test</string>
    <string name="button_easy">Easy</string>
    <string name="button_normal">Normal</string>
    <string name="button_hard">Hard</string>
    <string name="select_level">Выберите уровень</string>
    <string name="progress_answers">Правильных ответов %s (минимум %s)</string>
    <string name="question">\?</string>
    <string name="required_score">Необходимое количество правильных ответов: %s</string>
    <string name="score_answers">Твой счет: %s</string>
    <string name="required_percentage">Необходимый процент правильных ответов: %s</string>
    <string name="score_percentage">Процент правильных ответов: %s</string>
    <string name="retry">Попробовать снова</string>
    <string name="game_over">Игра завершена</string>
    <string name="content_logo">Логотип</string>
</resources>