<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="gameResult"
            type="com.example.composition.domain.entity.GameResult" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.GameFinishedFragment">

        <ImageView
            android:id="@+id/imageView_result"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="32dp"
            android:contentDescription="@string/game_over"
            app:imageViewResult="@{gameResult.winner}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ImageContrastCheck"
            tools:src="@drawable/happy_brain" />

        <TextView
            android:id="@+id/textView_required_answers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/imageView_result"
            app:requireAnswers="@{gameResult.gameSettings.minCountOfRightsAnswers}"
            tools:text="@string/required_score" />

        <TextView
            android:id="@+id/textView_score_answers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/textView_required_answers"
            app:scoreAnswers="@{gameResult.countOfRightAnswers}"
            tools:text="@string/score_answers" />

        <TextView
            android:id="@+id/textView_required_percentage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/textView_score_answers"
            app:requirePercentage="@{gameResult.gameSettings.minCountOfRightsAnswers}"
            tools:text="@string/required_percentage" />

        <TextView
            android:id="@+id/textView_score_percentage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/textView_required_percentage"
            app:scorePercentage="@{gameResult}"
            tools:text="@string/score_percentage" />

        <Button
            android:id="@+id/button_retry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/retry"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>